--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@radix-ui/themes": "^3.2.1",
+    "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/postcss": "^4.1.17",
     "apexcharts": "^5.3.6",
     "autoprefixer": "10.4.15",
+    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
+    "framer-motion": "^12.26.2",
     "hamburger-react": "^2.5.2",
     "html2pdf.js": "^0.12.1",
     "js-cookie": "^3.0.5",
@@ -26,16 +31,20 @@
     "jwt-decode": "^4.0.0",
     "lucide": "^0.556.0",
     "lucide-react": "^0.556.0",
+    "motion": "^12.26.2",
     "next": "^16.0.4",
     "next-auth": "^4.24.13",
     "next-sanity": "^11.6.9",
+    "next-themes": "^0.4.6",
     "nextjs-toast-notify": "^1.58.0",
     "nodemailer": "^7.0.10",
     "postcss": "^8.4.29",
     "react": "^19.2.0",
     "react-apexcharts": "^1.9.0",
+    "react-chartjs-2": "^5.3.1",
     "react-day-picker": "^9.12.0",
     "react-dom": "^19.2.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.4.1",
     "react-range-slider-input": "^3.0.7",
