--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-redux": "^9.2.0",
     "react-simple-star-rating": "^5.1.7",
     "react-spinners": "^0.17.0",
+    "react-theme-switch-animation": "^1.0.0",
     "redux-persist": "^6.0.0",
     "sanity": "^4.18.0",
     "swiper": "^10.2.0",
